# paperlens-arxiv-server

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
configs/: server.yaml
scripts/: bootstrap_cache_from_litsearch.py  launch_local.sh  upload_indexes_to_hf.py
src/paperlens_arxiv_server/: __init__.py  cache.py  image_loader.py  prompts.py  reranker.py  retriever_client.py  server.py
src/paperlens_arxiv_server/ui/: index.html
tests/: test_cache.py  test_e2e.py  test_reranker.py
