[project]
name = "paperlens-arxiv-server"
version = "0.1.0"
description = "PaperLens reranker stacked on top of arxiv_retriever -- accept-probability-ranked arXiv search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "requests>=2.31",
    "huggingface-hub>=0.23",
    "omegaconf>=2.3",
    "transformers>=4.45",
    "torch>=2.4",
    "vllm>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
paperlens-arxiv-server = "paperlens_arxiv_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperlens_arxiv_server"]
