[project]
name = "paperlens-arxiv-server"
version = "0.1.0"
description = "PaperLens reranker stacked on top of arxiv_retriever -- accept-probability-ranked arXiv search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Orchestration server only. All model/GPU deps live in `paperlens serve`
    # (paperlens-training-and-inference); we just POST sharegpt rows to it.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "requests>=2.31",
    "omegaconf>=2.3",
    "Pillow>=10",            # image_loader (load page PNGs to PIL.Image)
    "pandas>=2.0",           # bootstrap_cache_from_litsearch
    "pyarrow>=14",           # parquet read
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
paperlens-arxiv-server = "paperlens_arxiv_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperlens_arxiv_server"]

[tool.hatch.build]
include = ["src/paperlens_arxiv_server/ui/**"]
